--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -9,13 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os \n",
+    "import re\n",
     "import pandas as pd\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import spacy as sp"
    ]
   },
   {
@@ -521,11 +523,138 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tratamento dos textos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uma vez com o dataset de textos e labels, é necessário fazer o tratamento dos textos para tornar o aprendizado do modelo mais eficiente. Para isso, é comum fazer a remoção de caracteres especiais e pontuações, assim como a  realização da tokenização (processo que divide o texto em unidades menores [palavras ou subpalavras]). Além disso, tambem devemos converter o texto para letras minúsculas para garantir consistência na contagem de palavras."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como primeiro passo, vamos remover as 'stop words' que são palavras normalmente encaradas como 'ruído' no texto.\n",
+    "\n",
+    "Isso é importante para reduzirmos a dimensão de features e facilitar a identificação de padrões mais relevantes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['após',\n",
+       " 'grande',\n",
+       " 'uns',\n",
+       " 'partir',\n",
+       " 'puderam',\n",
+       " 'nas',\n",
+       " 'assim',\n",
+       " 'atrás',\n",
+       " 'eu',\n",
+       " 'põem']"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp = sp.blank(\"pt\")\n",
+    "stop_words = sp.lang.pt.STOP_WORDS\n",
+    "[sw for sw in stop_words][:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cleaning(text):\n",
+    "    text = text.lower()\n",
+    "\n",
+    "    text = re.sub(r\"[!@#%&$*º]\", \"\", text)\n",
+    "    text = re.sub(r\"[àáâãäåã]\", \"a\", text)\n",
+    "    text = re.sub(r\"[èéêë]\", \"e\", text)\n",
+    "    text = re.sub(r\"[ìíîï]\", \"i\", text)\n",
+    "    text = re.sub(r\"[òóôõö]\", \"o\", text)\n",
+    "    text = re.sub(r\"[ùúûü]\", \"u\", text)\n",
+    "    text = re.sub(r\"[ýÿ]\", \"y\", text)\n",
+    "    text = re.sub(r\"[ç]\", \"c\", text)\n",
+    "\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A emissão do documento não pode ser realizada, consulte o motivo.\n",
+      "a emissao do documento nao pode ser realizada, consulte o motivo.\n",
+      "\n",
+      "\n",
+      "Ação faz parte do Revitaliza SP, projeto que incentiva a conscientização dos moradores do bairro\n",
+      "acao faz parte do revitaliza sp, projeto que incentiva a conscientizacao dos moradores do bairro\n",
+      "\n",
+      "\n",
+      "Requisição para localizar códigos de produtos de ATA.\n",
+      "requisicao para localizar codigos de produtos de ata.\n",
+      "\n",
+      "\n",
+      "POT volta às aulas: mães contratadas pela Prefeitura iniciam atividades nesta segunda-feira 01.\n",
+      "pot volta as aulas: maes contratadas pela prefeitura iniciam atividades nesta segunda-feira 01.\n",
+      "\n",
+      "\n",
+      "Cláusula anticorrupção - Instrução Normativa Conjunta CGE/SEA Nº 01/2020\n",
+      "clausula anticorrupcao - instrucao normativa conjunta cge/sea n 01/2020\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for text in dataset[texto].sample(5).tolist():\n",
+    "    print(text)\n",
+    "    print(cleaning(text))\n",
+    "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dataset[texto].sample(5).tolist()'"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaning('êle não sabe càçar á! @@ .')\n"
+   ]
   }
  ],
  "metadata": {
