--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -9,15 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 177,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mathe\\anaconda3\\envs\\projects-env\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os \n",
     "import re\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import spacy as sp"
+    "import spacy as sp\n",
+    "import string\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import tensorflow_datasets as tfds"
    ]
   },
   {
@@ -540,7 +552,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como primeiro passo, vamos remover as 'stop words' que são palavras normalmente encaradas como 'ruído' no texto.\n",
+    "- Remover a acentuação.\n",
+    "- Remover caracteres especiais.\n",
+    "- Remover as 'stop words' que são palavras normalmente encaradas como 'ruído' no texto. \n",
     "\n",
     "Isso é importante para reduzirmos a dimensão de features e facilitar a identificação de padrões mais relevantes."
    ]
@@ -571,6 +585,7 @@
     }
    ],
    "source": [
+    "## Definindo stop words \n",
     "nlp = sp.blank(\"pt\")\n",
     "stop_words = sp.lang.pt.STOP_WORDS\n",
     "[sw for sw in stop_words][:10]"
@@ -578,14 +593,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Caracteres especiais\n",
+    "string.punctuation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ele gosta de cacar'"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Usando re (Regular Expression)\n",
+    "exemplo = 'Ele gosta de caçar'\n",
+    "re.sub(r\"[ç]\", \"c\", exemplo)  #Removendo o 'ç'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cleaning(text):\n",
     "    text = text.lower()\n",
     "\n",
-    "    text = re.sub(r\"[!@#%&$*º]\", \"\", text)\n",
+    "    text = re.sub(r\"[!@#%&$*º“”—-]\", \"\", text)\n",
     "    text = re.sub(r\"[àáâãäåã]\", \"a\", text)\n",
     "    text = re.sub(r\"[èéêë]\", \"e\", text)\n",
     "    text = re.sub(r\"[ìíîï]\", \"i\", text)\n",
@@ -594,36 +652,46 @@
     "    text = re.sub(r\"[ýÿ]\", \"y\", text)\n",
     "    text = re.sub(r\"[ç]\", \"c\", text)\n",
     "\n",
-    "    return text"
+    "    text = text.lower()\n",
+    "    document = nlp(text)\n",
+    "\n",
+    "    words = []\n",
+    "    for token in document:\n",
+    "        words.append(token.text)\n",
+    "\n",
+    "    words = [word for word in words if word not in stop_words and word not in string.punctuation] \n",
+    "    words = ' '.join([str(element) for element in words])\n",
+    "\n",
+    "    return words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A emissão do documento não pode ser realizada, consulte o motivo.\n",
-      "a emissao do documento nao pode ser realizada, consulte o motivo.\n",
+      "assuntos auxilio-doenca previdenciario beneficios especie direito previdenciario aposentadoria invalidez art. 42/7\n",
+      "assuntos auxiliodoenca previdenciario beneficios especie direito previdenciario aposentadoria invalidez art. 42/7\n",
       "\n",
       "\n",
-      "Ação faz parte do Revitaliza SP, projeto que incentiva a conscientização dos moradores do bairro\n",
-      "acao faz parte do revitaliza sp, projeto que incentiva a conscientizacao dos moradores do bairro\n",
+      "continuar comprando navegue categorias site faca busca produto\n",
+      "continuar comprando navegue categorias site faca busca produto\n",
       "\n",
       "\n",
-      "Requisição para localizar códigos de produtos de ATA.\n",
-      "requisicao para localizar codigos de produtos de ata.\n",
+      "iptu imposto predial territorial urbano\n",
+      "iptu imposto predial territorial urbano\n",
       "\n",
       "\n",
-      "POT volta às aulas: mães contratadas pela Prefeitura iniciam atividades nesta segunda-feira 01.\n",
-      "pot volta as aulas: maes contratadas pela prefeitura iniciam atividades nesta segunda-feira 01.\n",
+      "acesse fale conosco tutoriais tambem termos uso politica privacidade\n",
+      "acesse fale conosco tutoriais tambem termos uso politica privacidade\n",
       "\n",
       "\n",
-      "Cláusula anticorrupção - Instrução Normativa Conjunta CGE/SEA Nº 01/2020\n",
-      "clausula anticorrupcao - instrucao normativa conjunta cge/sea n 01/2020\n",
+      "imagem geladeira refrigerador frost free inox 454l\n",
+      "imagem geladeira refrigerador frost free inox 454l\n",
       "\n",
       "\n"
      ]
@@ -638,22 +706,284 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>auxiliodoenca previdenciario beneficios especi...</td>\n",
+       "      <td>orgao publico</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pagar contas atraso r1.290,90</td>\n",
+       "      <td>financas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>entao encontraremos proxima aula</td>\n",
+       "      <td>educacao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>resultados categoria ofertas modelo nissan kicks</td>\n",
+       "      <td>industrias</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>alem embalagem reutilizavel 100 reciclavel</td>\n",
+       "      <td>industrias</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>562</th>\n",
+       "      <td>estudantes rede municipal voltam aulas valparaiso</td>\n",
+       "      <td>educacao</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>563</th>\n",
+       "      <td>estudantes rede municipal voltam aulas valparaiso</td>\n",
+       "      <td>orgao publico</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>564</th>\n",
+       "      <td>empresas orgaos publicos</td>\n",
+       "      <td>orgao publico</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>565</th>\n",
+       "      <td>dge – departamento gestao estrategica metas na...</td>\n",
+       "      <td>orgao publico</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>566</th>\n",
+       "      <td>lei 13.467/2017 reforma trabalhista</td>\n",
+       "      <td>orgao publico</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>567 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'dataset[texto].sample(5).tolist()'"
+       "                                              sentence       category\n",
+       "0    auxiliodoenca previdenciario beneficios especi...  orgao publico\n",
+       "1                        pagar contas atraso r1.290,90       financas\n",
+       "2                     entao encontraremos proxima aula       educacao\n",
+       "3     resultados categoria ofertas modelo nissan kicks     industrias\n",
+       "4           alem embalagem reutilizavel 100 reciclavel     industrias\n",
+       "..                                                 ...            ...\n",
+       "562  estudantes rede municipal voltam aulas valparaiso       educacao\n",
+       "563  estudantes rede municipal voltam aulas valparaiso  orgao publico\n",
+       "564                           empresas orgaos publicos  orgao publico\n",
+       "565  dge – departamento gestao estrategica metas na...  orgao publico\n",
+       "566                lei 13.467/2017 reforma trabalhista  orgao publico\n",
+       "\n",
+       "[567 rows x 2 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cleaning('êle não sabe càçar á! @@ .')\n"
+    "dataset[texto] = [cleaning(text) for text in dataset[texto]]\n",
+    "dataset[setor] = [cleaning(text) for text in dataset[setor]]\n",
+    "\n",
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tokenização"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = dataset[texto]\n",
+    "\n",
+    "enc = LabelEncoder()\n",
+    "y = enc.fit_transform(dataset[setor])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X >>\n",
+      " 0    auxiliodoenca previdenciario beneficios especi...\n",
+      "1                        pagar contas atraso r1.290,90\n",
+      "2                     entao encontraremos proxima aula\n",
+      "3     resultados categoria ofertas modelo nissan kicks\n",
+      "4           alem embalagem reutilizavel 100 reciclavel\n",
+      "Name: sentence, dtype: object\n",
+      "-----\n",
+      "y >> [3 1 0 2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('X >>\\n',X[:5])\n",
+    "print('-----')\n",
+    "print('y >>',y[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = tfds.deprecated.text.SubwordTextEncoder.build_from_corpus(X, target_vocab_size=10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2343"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.vocab_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['r_', 'carro_', 'voce_', 'sao_', '2021_']"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.subwords[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2152, 2199, 138, 2163, 2160, 2153, 2169, 2152, 2170]"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ids = tokenizer.encode('Aprenda LIBRAS')\n",
+    "ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Aprenda LIBRAS'"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = tokenizer.decode(ids)\n",
+    "text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[637, 231, 119, 107, 29, 145],\n",
+       " [93, 283, 1878, 84, 2133, 684, 2131, 123],\n",
+       " [562, 1553, 143, 1871],\n",
+       " [219, 616, 26, 1203, 6, 1279],\n",
+       " [122, 169, 136, 41, 404]]"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_inputs = [tokenizer.encode(sentence) for sentence in X]\n",
+    "data_inputs[:5]"
    ]
   }
  ],
