--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python --version"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,18 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 204,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\mathe\\anaconda3\\envs\\projects-env\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os \n",
     "import re\n",
@@ -29,7 +37,8 @@
     "import spacy as sp\n",
     "import string\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "import tensorflow_datasets as tfds"
+    "import tensorflow_datasets as tfds\n",
+    "import tensorflow as tf"
    ]
   },
   {
@@ -984,6 +993,54 @@
    "source": [
     "data_inputs = [tokenizer.encode(sentence) for sentence in X]\n",
     "data_inputs[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Padding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_inputs = tf.keras.preprocessing.sequence.pad_sequences(data_inputs,\n",
+    "                                                            value = 0,\n",
+    "                                                            padding = 'post',\n",
+    "                                                            maxlen=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 637,  231,  119,  107,   29,  145,    0,    0,    0,    0,    0,\n",
+       "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "           0,    0,    0,    0,    0,    0],\n",
+       "       [  93,  283, 1878,   84, 2133,  684, 2131,  123,    0,    0,    0,\n",
+       "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+       "           0,    0,    0,    0,    0,    0]])"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_inputs[:2]"
    ]
   }
  ],
