crating CNN model

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,19 +26,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\mathe\\anaconda3\\envs\\projects-env\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os \n",
     "import re\n",
+    "import string\n",
+    "import numpy as np\n",
+    "import spacy as sp\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import spacy as sp\n",
-    "import string\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
+    "import tensorflow as tf\n",
     "import tensorflow_datasets as tfds\n",
-    "import tensorflow as tf"
+    "\n",
+    "from tensorflow.keras import layers\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -50,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +169,7 @@
        "[521 rows x 2 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,20 +191,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['AUXILIAR DE MONTAGEM - CABREÚVA/SP tem 2 VAGAS disponíveis. Inscrições de 23/02/2021 até 01/03/2021 mais detalhes ver em candidatar-se.',\n",
-       " 'Iniciativas de professores, alunos, colaboradores e parceiros fizeram a diferença na vida de muitas pessoas em 2020.',\n",
-       " 'Cliente Claro tem descontos exclusivos.',\n",
-       " 'Caso tenha algum problema em relação ao Certificado Digital, clique aqui para saber como liberar o acesso.',\n",
-       " 'Seu limite pode ser reduzido para auxiliar você no controle do seu orçamento.']"
+       "['Imagem de Geladeira Refrigerador Frost Free Inox 454L.',\n",
+       " 'Assuntos: Auxílio-Doença Previdenciário, Benefícios em Espécie, DIREITO PREVIDENCIÁRIO Aposentadoria por Invalidez (Art. 42/7).',\n",
+       " 'DGE – Departamento de Gestão Estratégica Metas Nacionais Portal CNJ de Boas Práticas do Poder Judiciário',\n",
+       " 'Escolha a forma de pagamento e depois clique em continuar.',\n",
+       " 'Relações Humanas, carga horária total do módulo 14hs.']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +242,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +426,7 @@
        "[521 rows x 2 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +545,7 @@
        "[567 rows x 2 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,25 +583,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['após',\n",
-       " 'grande',\n",
-       " 'uns',\n",
-       " 'partir',\n",
-       " 'puderam',\n",
-       " 'nas',\n",
-       " 'assim',\n",
-       " 'atrás',\n",
-       " 'eu',\n",
-       " 'põem']"
+       "['sempre',\n",
+       " 'tentaram',\n",
+       " 'veja',\n",
+       " 'saber',\n",
+       " 'disso',\n",
+       " 'agora',\n",
+       " 'apontar',\n",
+       " 'dez',\n",
+       " 'nossa',\n",
+       " 'somos']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +624,7 @@
        "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +645,7 @@
        "'Ele gosta de cacar'"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,37 +689,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "assuntos auxilio-doenca previdenciario beneficios especie direito previdenciario aposentadoria invalidez art. 42/7\n",
-      "assuntos auxiliodoenca previdenciario beneficios especie direito previdenciario aposentadoria invalidez art. 42/7\n",
+      "Além disso, a embalagem é reutilizável e 100% reciclável.\n",
+      "alem embalagem reutilizavel 100 reciclavel\n",
       "\n",
       "\n",
-      "continuar comprando navegue categorias site faca busca produto\n",
-      "continuar comprando navegue categorias site faca busca produto\n",
+      "Cláusula anticorrupção - Instrução Normativa Conjunta CGE/SEA Nº 01/2020\n",
+      "clausula anticorrupcao   instrucao normativa conjunta cge sea n 01/2020\n",
       "\n",
       "\n",
-      "iptu imposto predial territorial urbano\n",
-      "iptu imposto predial territorial urbano\n",
+      "Valor Boleto R$ 888,00 no cartão de crédito em até  10X R$ 88,80. \n",
+      "boleto r 888,00 cartao credito ate    10x r 88,80\n",
       "\n",
       "\n",
-      "acesse fale conosco tutoriais tambem termos uso politica privacidade\n",
-      "acesse fale conosco tutoriais tambem termos uso politica privacidade\n",
+      "Juntada de certidão - requisição de pagamento preparada para transmissão.\n",
+      "juntada certidao   requisicao pagamento preparada transmissao\n",
       "\n",
       "\n",
-      "imagem geladeira refrigerador frost free inox 454l\n",
-      "imagem geladeira refrigerador frost free inox 454l\n",
+      "Mensagem da Nissan do Brasil: Compre seu carro 0 km hoje mesmo!\n",
+      "mensagem nissan brasil compre carro 0 km hoje\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "## Comparando texto original com o texto processado\n",
     "for text in dataset[texto].sample(5).tolist():\n",
     "    print(text)\n",
     "    print(cleaning(text))\n",
@@ -715,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +835,7 @@
        "[567 rows x 2 columns]"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,8 +855,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Antes da tokenização, vamos definir X como os textos e y sendo a representação númerica de cada setor (aplicando o label enconding)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -881,45 +902,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Construindo o tokenizer (tendo 10 mil como o tamanho do vocabulario alvo)\n",
     "tokenizer = tfds.deprecated.text.SubwordTextEncoder.build_from_corpus(X, target_vocab_size=10000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2343"
+       "2341"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## Tamanho do vocabulário\n",
     "tokenizer.vocab_size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['r_', 'carro_', 'voce_', 'sao_', '2021_']"
+       "['   ', 'r_', 'carro_', 'voce_', 'sao_']"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,17 +952,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exemplo de como funciona a tokenização:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2152, 2199, 138, 2163, 2160, 2153, 2169, 2152, 2170]"
+       "[2150, 2197, 135, 2161, 2158, 2151, 2167, 2150, 2168]"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +990,7 @@
        "'Aprenda LIBRAS'"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,21 +1001,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[637, 231, 119, 107, 29, 145],\n",
-       " [93, 283, 1878, 84, 2133, 684, 2131, 123],\n",
-       " [562, 1553, 143, 1871],\n",
-       " [219, 616, 26, 1203, 6, 1279],\n",
-       " [122, 169, 136, 41, 404]]"
+       "[[639, 232, 117, 106, 31, 142],\n",
+       " [93, 284, 1877, 86, 2131, 688, 2129, 120],\n",
+       " [564, 1554, 140, 641],\n",
+       " [220, 618, 28, 1203, 7, 1279],\n",
+       " [119, 166, 133, 42, 401]]"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,8 +1040,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uma vez que muitos modelos exigem que o dado de entrada sejam de uma dimensão em específico, vamos aplicar o padding para que todos os inputs sejam do mesmo tamanho. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1016,31 +1060,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 637,  231,  119,  107,   29,  145,    0,    0,    0,    0,    0,\n",
+       "array([[ 639,  232,  117,  106,   31,  142,    0,    0,    0,    0,    0,\n",
        "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
        "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
        "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
        "           0,    0,    0,    0,    0,    0],\n",
-       "       [  93,  283, 1878,   84, 2133,  684, 2131,  123,    0,    0,    0,\n",
+       "       [  93,  284, 1877,   86, 2131,  688, 2129,  120,    0,    0,    0,\n",
        "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
        "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
        "           0,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
        "           0,    0,    0,    0,    0,    0]])"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_inputs[:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modelagem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como um primeiro modelo, optei criar uma Rede Neural Convolucional (CNN) que receberá os textos no formato `data_inputs`. Essa CNN processará o texto ao longo de camadas de convolução e pooling e, por fim, retornará a probabilidade do texto de entrada estar associado a cada classe possível."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Primeiro é necessário separar os dados de treino e os dados de teste."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_labels = np.array(y)\n",
+    "train_inputs, test_inputs, train_labels, test_labels = train_test_split(data_inputs,\n",
+    "                                                                        data_labels,\n",
+    "                                                                        test_size=0.1,\n",
+    "                                                                        stratify = data_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape dos dados de treinamento: Inputs: (510, 50) Labels: (510,)\n",
+      "Shape dos dados de teste: Inputs: (57, 50) Labels: (57,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Shape dos dados de treinamento:',f'Inputs: {train_inputs.shape} Labels: {train_labels.shape}')\n",
+    "print('Shape dos dados de teste:',f'Inputs: {test_inputs.shape} Labels: {test_labels.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DCNN(tf.keras.Model):\n",
+    "\n",
+    "  def __init__(self,\n",
+    "               vocab_size,\n",
+    "               emb_dim=128,\n",
+    "               nb_filters=50,\n",
+    "               ffn_units=512,\n",
+    "               nb_classes=2,\n",
+    "               dropout_rate=0.1,\n",
+    "               training=False,\n",
+    "               name='dcnn'):\n",
+    "\n",
+    "    ## Inicializando modelo\n",
+    "    super(DCNN, self).__init__(name=name)\n",
+    "\n",
+    "    ## Primeira camada (Embeddings)\n",
+    "    self.embedding = layers.Embedding(vocab_size, emb_dim)\n",
+    "\n",
+    "    ## Segunda camada (Kernels)\n",
+    "    self.bigram = layers.Conv1D(filters=nb_filters, kernel_size=2, padding='same', activation='relu')\n",
+    "    self.trigram = layers.Conv1D(filters=nb_filters, kernel_size=3, padding='same', activation='relu')\n",
+    "\n",
+    "    ## Terceira camanda (Pooling)\n",
+    "    self.pool = layers.GlobalMaxPool1D()\n",
+    "    # self.batchnorm = layers.BatchNormalization()\n",
+    "\n",
+    "    ## A saída da camada pooling, já é uma camada flatten\n",
+    "\n",
+    "    ## Rede densa\n",
+    "    self.dense_1 = layers.Dense(units=ffn_units, activation='relu')\n",
+    "    self.dropout = layers.Dropout(rate=dropout_rate)\n",
+    "\n",
+    "    if nb_classes == 2:\n",
+    "      self.last_dense = layers.Dense(units=1, activation='sigmoid')\n",
+    "    else:\n",
+    "      self.last_dense = layers.Dense(units=nb_classes,activation='softmax')\n",
+    "\n",
+    "  def call(self, inputs, training):\n",
+    "    # Função de chamada que define o passo de propagação para frente do modelo\n",
+    "\n",
+    "    # Camada de embeddings: converte os índices de palavras em vetores de embedding\n",
+    "    x = self.embedding(inputs)\n",
+    "\n",
+    "    # Convolução de bigrama seguida por pooling\n",
+    "    x_1 = self.bigram(x)\n",
+    "    x_1 = self.pool(x_1)\n",
+    "\n",
+    "    # Convolução de trigrama seguida por pooling\n",
+    "    x_2 = self.trigram(x)\n",
+    "    x_2 = self.pool(x_2)\n",
+    "\n",
+    "    # Concatenando as saídas das convoluções de bigrama e trigrama\n",
+    "    merged = tf.concat([x_1, x_2], axis=-1) \n",
+    "    merged = self.dense_1(merged) # processa a concatenação das saídas das camadas de pooling\n",
+    "    merged = self.dropout(merged, training=training) # dropout para evitar overfitting\n",
+    "    output = self.last_dense(merged) #ultima camada\n",
+    "   \n",
+    "    return output"
    ]
   }
  ],
